[tool.poetry]
name = "palantir-oauth-client"
version = "0.0.0" # placeholder, updated by git describe during publish
description = "OAuth2 client for Palantir Foundry"
license = "Apache-2.0"
authors = [
  "Thomas Powell <tpowell@palantir.com>",
  "Andrew Higgins <ahiggins@palantir.com>",
]
readme = "README.md"
packages = [{ include = "palantir_oauth_client" }]
include = ["palantir_oauth_client/_version.py"]
homepage = "https://github.com/palantir/palantir-oauth-client"

[tool.poetry.dependencies]
python = "^3.8"
oauthlib = "^3.2.2"
requests = "^2.28.2"
requests-oauthlib = "^1.3.1"
# urllib3 = "^1.26.14"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["setuptools >= 35.0.2", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
